samples/_failures_safe/1761444800_38434e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5b3e569d.c: In function ‘main’:
./samples/SAFE/__tmp_5b3e569d.c:174:20: error: expected ‘;’ at end of input
  174 |             fprintf
      |                    ^
      |                    ;
./samples/SAFE/__tmp_5b3e569d.c:174:13: error: expected declaration or statement at end of input
  174 |             fprintf
      |             ^~~~~~~
./samples/SAFE/__tmp_5b3e569d.c:174:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5b3e569d.c:174:13: error: expected declaration or statement at end of input
